--- a/.github/terraform-apply.yml
+++ b/.github/terraform-apply.yml
@@ -6,14 +6,14 @@ on:
       - main
 
 env:
-  TF_CLOUD_ORGANIZATION: "mlopspipeline1"
+  TF_CLOUD_ORGANIZATION: "TKO_BMIT6"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "mlopspipeline1"
+  TF_WORKSPACE: "learn-terraform-github-actions"
   CONFIG_DIRECTORY: "./"
 
 jobs:
   terraform:
-    if: github.repository != 'hashicorp-education/mlopspipeline1'
+    if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
     name: "Terraform Apply"
     runs-on: ubuntu-latest
     permissions:
@@ -28,7 +28,6 @@ jobs:
         with:
           workspace: ${{ env.TF_WORKSPACE }}
           directory: ${{ env.CONFIG_DIRECTORY }}
-
       - name: Create Apply Run
         uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
         id: apply-run
@@ -42,4 +41,4 @@ jobs:
         id: apply
         with:
           run: ${{ steps.apply-run.outputs.run_id }}
-          comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
+          comment: "Apply Run from GitHub Actions CI ${{ github.sha }}
